[package]
name = "mysql-graph"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*"
]

[dependencies]
eframe = "0.21.3"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
env_logger = "0.10.0"
mysql_connector_wrapper = { path = "./crates/mysql_connector_wrapper" }
mysql_graph_gui = { path = "./crates/mysql_graph_gui" }